fixed z-index menu/fixed overlapping photos/fixed button"

--- a/src/styles/blocks/details.scss
+++ b/src/styles/blocks/details.scss
@@ -18,6 +18,7 @@
       content: "";
       display: block;
       padding-bottom: 100%;
+      pointer-events: none;
     }
 
     @include onTablet {
@@ -42,7 +43,7 @@
     transition: all 0.3s;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
     }
   }
 
