--- a/src/styles/blocks/main-content.scss
+++ b/src/styles/blocks/main-content.scss
@@ -5,4 +5,8 @@
   align-items: center;
   background-color: $mainDark;
   padding: 64px 0 0;
+
+  @include onTablet {
+    padding: 120px 0 0;
+  }
 }
