--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,7 @@
 .menu {
   height: 100vh;
   background-color: $menuBackground;
+  z-index: 100;
 
   overflow-y: auto;
 
